--- a/client/index.html
+++ b/client/index.html
@@ -5,12 +5,12 @@
 <!--    <meta name="viewport"-->
 <!--          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="less/main.less">
+    <link rel="stylesheet" href="main.css">
     <title>NC :: CSRD</title>
 </head>
 <body>
     <div class="app"></div>
 
-    <script src="index.js"></script>
+    <script src="index.min.js"></script>
 </body>
 </html>
