--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
 <!--          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="less/main.less">
+    <script src="https://kit.fontawesome.com/7b42635023.js" crossorigin="anonymous"></script>
     <title>NC :: CSRD</title>
 </head>
 <body>
