--- a/client/index.html
+++ b/client/index.html
@@ -2,15 +2,30 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-<!--    <meta name="viewport"-->
-<!--          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
+    <meta name="viewport"
+  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="less/main.less">
     <title>NC :: CSRD</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDl-KJcJFBPfDE-Np8fIgKPH9b20myr90&callback=initMap&libraries=&v=weekly"
+            defer
+    ></script>
 </head>
 <body>
     <div class="app"></div>
-
     <script src="index.js"></script>
+    <script>
+        let map;
+
+        function initMap() {
+            console.log(document.getElementsByClassName("location__map")[0]);
+            map = new google.maps.Map(document.getElementsByClassName("location__map")[0], {
+                center: { lat: -34.397, lng: 150.644 },
+                zoom: 8,
+            });
+        }
+    </script>
 </body>
 </html>
